# Simple-Kafka_Adapter

./: .gitignore  CHANGELOG.md  CMakeLists-linux.txt  CMakeLists.txt  CMakeSettings.json  OldReleases.md  README.md  VS2017_building.md  admin.md  avro.md  building.md  connection.md  consumer.md  exceptionHandling.md  launch.vs.json  logging.md  problems.md  producer.md
1c/: manifest.xml  ПодключитьВК.epf  РаботаСКомпонентой.epf  рКафка.cfe
1С/: СлушатьСообщения.epf
avro-cpp-linux/: CMakeLists.txt
docs/: README.md  acl.md  admin.md  avro.md  building.md  connection.md  consumer.md  problems.md  producer.md  protobuf.md  protobuf_static_linking.md  schema_registry.md  statistic.md  transactions.md  visual_studio_build.md
docs/examples/: auto_commit_off.md  transactions_examples.md
examples/: GetParameters_Example.bsl  auto_commit_off.md  modern_consumer.md
include/: ComponentBase.h  types.h
lib/: lz4.lib  zlib.lib
pkg/: MANIFEST.XML
src/: Component.cpp  Component.h  SimpleKafka1C.cpp  SimpleKafka1C.h  addin.def  admin_acl.cpp  admin_groups.cpp  admin_metadata.cpp  admin_topics.cpp  avro_methods.cpp  consumer_methods.cpp  dllmain.cpp  exports.cpp  md5.cpp  md5.h  producer_methods.cpp  protobuf_methods.cpp  schema_registry_methods.cpp  stdafx.h  utils.cpp  utils.h
